<resources>
    <string name="app_name">Tasky</string>
    <string name="EditCategories">Edit Categories</string>
    <string name="NewTask">New task</string>
    <string name="addNewTask">Add new task</string>
    <string name="newTaskTitle">Title:</string>
    <string name="newTaskCategory">Category:</string>
    <string name="newTaskPriority">Priority:</string>
    <string name="newTaskDescription">Description:</string>
    <string name="newCategory">New Category</string>
    <string name="newCategoryWarningLenth">Please enter at least 3 letters.</string>
    <string name="newCategoryWarningExists">Please enter category that does not exist.</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="warningEditDeleteGeneralCategory">Cannot edit or delete General category.</string>
    <string name="titleWarningExists">Cannot create note with same title.</string>
    <string name="newTaskTitleShortWarning">Please enter title longer then 2 characters.</string>
    <string name="save">Save</string>
    <string name="EditTask">Edit task</string>
</resources>
